--- a/config/ideavim/.ideavimrc
+++ b/config/ideavim/.ideavimrc
@@ -21,7 +21,7 @@ set hlsearch
 set visualbell
 
 " Use system clipboard
-set clipboard+=unnamed
+set clipboard+=unnamedplus
 
 let mapleader = " "
 
