fix(hyprpanel): enable monitor-specific workspace display
Updated the `bar.workspaces.monitorSpecific` setting to `true` in the Hyprpanel configuration. This ensures that workspaces are displayed per monitor, improving multi-monitor workspace management and clarity.

--- a/config/hyprpanel/config.json
+++ b/config/hyprpanel/config.json
@@ -418,7 +418,7 @@
   "theme.bar.floating": false,
   "theme.bar.layer": "top",
   "bar.workspaces.showAllActive": true,
-  "bar.workspaces.monitorSpecific": false,
+  "bar.workspaces.monitorSpecific": true,
   "bar.workspaces.hideUnoccupied": false,
   "notifications.showActionsOnHover": true,
   "bar.network.label": false,
