feat(home): improve Hyprland and lockfile configurations
Added Hyprpanel and refined workspace tagging in Hyprland for better organization and usability. Updated animation settings for smoother transitions and increased padding in Kitty for enhanced visual comfort. Bumped lockfile dependencies to the latest versions for better compatibility.

--- a/modules/home/ideavim/.ideavimrc
+++ b/modules/home/ideavim/.ideavimrc
@@ -32,10 +32,8 @@ let mapleader = " "
 set surround
 set highlightedyank
 set nerdtree
+set quickscope
 
-" Easymotion settings
-set easymotion
-set notimeout
 
 " Which-key settings
 set which-key
